# paper-render

./: .gitignore  README.md  README_CN.md
.claude/commands/: paper-read.md
paper-library/EHR-Agent/CoEvoSkills/: CoEvoSkills_notes.md  CoEvoSkills_presentation.html
paper-library/EHR-Agent/CoEvoSkills/source/: 00README.json  main.tex  references.bib
paper-library/EHR-Agent/Meta-harnessing/: MetaHarness_notes.md  MetaHarness_presentation.html
paper-library/EHR-Agent/Meta-harnessing/source/: 00README.json  appendix.tex  citations.bib  colm2026_conference.sty  main.tex  math_commands.tex
paper-library/EHR-Agent/Meta-harnessing/source/tables/: ood_classification_gpt-oss-120b.tex  retriever_comparison.tex  task_comparison.tex  terminalbench_results.tex  text_classification_gpt-oss-120b.tex  (+3 more)
paper-library/EHR-Agent/SkillBench/: SkillsBench_notes.md  SkillsBench_presentation.html
paper-library/EHR-Agent/SkillBench/source/: additional_macros.sty  main.tex  references.bib
paper-library/EHR/Delphi/: Delphi_notes.md  Delphi_presentation.html
paper-library/EHR/L-MTP/: L-MTP_notes.md  L-MTP_presentation.html
paper-library/Review/ROSETTA/: ROSETTA_中文翻译.md
paper-library/Virtual-Stain/LPFM/: LPFM_notes.md  LPFM_presentation.html  generate_html.py
paper-library/Virtual-Stain/MIPHEI/: MIPHEI_notes.md  MIPHEI_presentation.html
paper-library/Virtual-Stain/PixCell/: PixCell_notes.md  PixCell_presentation.html
pdf-tools-mcp/: README.md  pyproject.toml
pdf-tools-mcp/src/pdf_tools_mcp/: __init__.py  server.py
templates/: base.css  base.js  skeleton.html
(+8 files in other folders)
